force-app/main/default/objects/KS_ReferPartnerContent__mdt/KS_ReferPartnerContent__mdt.object-meta.xml
<CustomObject>
    <description>Translated email content per language and email type for the Refer To Partner feature. Adding a new language requires only a new record — no code changes.</description>
    <label>Refer Partner Content</label>
    <pluralLabel>Refer Partner Contents</pluralLabel>
</CustomObject>