force-app/main/default/objects/KS_ReferPartnerContent__mdt/fields/BodyHtml__c.field-meta.xml
<CustomField>
    <fullName>BodyHtml__c</fullName>
    <description>Full HTML for the email body content section. Supported tokens: {Salutation}, {LeadName}, {AccountInfo}, {Comment}, {LeadOwnerName}, {FeedbackButtons} (reminder only).</description>
    <label>Body HTML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>