force-app/main/default/objects/KS_ReferPartnerContent__mdt/fields/FeedbackLabelBuyDT__c.field-meta.xml
<CustomField>
    <fullName>FeedbackLabelBuyDT__c</fullName>
    <description>Reminder only. Label for the feedback link: lead bought DT Spare Parts at another shop.</description>
    <label>Feedback Label: Buy DT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>