force-app/main/default/objects/KS_ReferPartnerContent__mdt/fields/FeedbackLabelDidNotBuy__c.field-meta.xml
<CustomField>
    <fullName>FeedbackLabelDidNotBuy__c</fullName>
    <description>Reminder only. Label for the feedback link: lead did not buy at all.</description>
    <label>Feedback Label: Did Not Buy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>