force-app/main/default/objects/KS_ReferPartnerContent__mdt/fields/FeedbackLabelOtherBrand__c.field-meta.xml
<CustomField>
    <fullName>FeedbackLabelOtherBrand__c</fullName>
    <description>Reminder only. Label for the feedback link: lead bought a different brand.</description>
    <label>Feedback Label: Other Brand</label>
    <length>500</length>
    <type>Text</type>
</CustomField>