force-app/main/default/objects/KS_ReferPartnerContent__mdt/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>