force-app/main/default/objects/KS_ReferPartnerContent__mdt/fields/LanguageCode__c.field-meta.xml
<CustomField>
    <fullName>LanguageCode__c</fullName>
    <label>Language Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>